# AssetStudio

./: AssetStudio.sln  Directory.Build.props  README.md
.github/workflows/: fbx.yml  package-release.yml  texture-decoder.yml
AssetStudio/: AssetStudio.csproj
AssetStudio.PInvoke/: AssetStudio.PInvoke.csproj
AssetStudioFBXNative/: AssetStudioFBXNative.csproj  CMakeLists.txt  fbx.cmake
AssetStudioFBXWrapper/: AssetStudioFBXWrapper.csproj  Fbx.cs
AssetStudioGUI/: AssetStudioGUI.csproj
AssetStudioUtility/: AssetStudioUtility.csproj
AssetStudioUtility/FMOD Studio API/: fmod.cs
Texture2DDecoderNative/: CMakeLists.txt  Texture2DDecoderNative.Android.csproj  Texture2DDecoderNative.WebAssembly.csproj  Texture2DDecoderNative.csproj
Texture2DDecoderNative/crunch/: crn_decomp.h
Texture2DDecoderWrapper/: Texture2DDecoderWrapper.csproj
scripts/: build.ps1
